Lots more API progress
